# iced_kim

./: Cargo.toml
examples/multi_windows/: Cargo.toml
examples/multi_windows/src/: main.rs
examples/multi_windows/src/pages/: home.rs  mod.rs  set.rs
examples/table/: Cargo.toml
examples/table/src/: main.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: core.rs  lib.rs
src/widget/: char_icon.rs  message_box.rs  mod.rs  multi_windows.rs  table.rs
src/widget/inner_message_box/: message_box_button.rs  message_box_window.rs  mod.rs
