[package]
name = "iced_kim"
version = "0.13.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["advanced"] }
iced_kim_macro = { path = "macro/" }
dyn-clone = "1.0.17"
downcast-rs = "1.2.0"

[features]
default = ["multi-windows"]
multi-windows = []
table = []
message-box = ["multi-windows"]


[workspace]
members = [ "examples/multi_windows","macro"]
